# jjtj308-lazylabel-web

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: health.py  projects.py  prompt.py  propagation.py
backend/app/services/: job_service.py  project_service.py  sam2_service.py
backend/data/projects/a685791a8a6d4b638091132019ada1a9/: meta.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: PropagationPanel.module.css  PropagationPanel.tsx
frontend/src/hooks/: useFrameCache.ts
frontend/src/pages/: ProjectList.module.css  ProjectList.tsx  ProjectView.module.css  ProjectView.tsx
