[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lazylabel-web-backend"
version = "0.1.0"
description = "LazyLabel Web backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "opencv-python-headless>=4.9",
    "Pillow>=10.3",
    "numpy>=1.26",
    "aiofiles>=23.2",
]

[project.optional-dependencies]
sam2 = [
    "torch>=2.3",
    "torchvision>=0.18",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
